Update project settings and resolve swiftlint warnings

--- a/In Sight/Controllers/Common/Gallery/Gallery.storyboard
+++ b/In Sight/Controllers/Common/Gallery/Gallery.storyboard
@@ -22,16 +22,7 @@
                                 <rect key="frame" x="5" y="0.0" width="365" height="603"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewLayout key="collectionViewLayout" id="L0k-9m-fUZ" customClass="PhotoGridLayout" customModule="In_Sight" customModuleProvider="target"/>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cs1-vn-rLX">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="mAw-k8-tSj" id="4km-Lr-yCU"/>
                                     <outlet property="delegate" destination="mAw-k8-tSj" id="BVg-cg-QM9"/>
